work on computing mel frames

--- a/Final_Project/final_project.ipynb
+++ b/Final_Project/final_project.ipynb
@@ -15,7 +15,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plot"
    ]
   },
   {
@@ -83,23 +83,27 @@
     "import librosa\n",
     "import torch\n",
     "\n",
-    "def load_audio_to_melspec_tensor(wavpath, sample_rate=16000):\n",
-    "    window_size = .025\n",
+    "def load_audio_to_melspec_tensor(wavpath, sample_rate=44_100):\n",
+    "    window_size = 0.025\n",
     "    window_stride = 0.01\n",
-    "    n_dft = 512\n",
+    "    n_dft = 2048\n",
     "    win_length = int(sample_rate * window_size)\n",
     "    hop_length = int(sample_rate * window_stride)\n",
-    "    y, sr = librosa.load(wavpath, sr=sample_rate)\n",
+    "    y, sr = librosa.load(wavpath)\n",
     "    y = y - y.mean()\n",
     "    y = np.append(y[0],y[1:]-.97*y[:-1])\n",
     "    # compute mel spectrogram\n",
-    "    stft = librosa.stft(y, n_fft=n_dft, hop_length=hop_length,\n",
-    "        win_length=win_length, window=signal.hamming)\n",
+    "    stft = librosa.stft(y, n_fft=n_dft, hop_length=hop_length, win_length=win_length, window=signal.hamming)\n",
     "    spec = np.abs(stft)**2\n",
     "    mel_basis = librosa.filters.mel(sr=sample_rate, n_fft=n_dft, n_mels=40, fmin=20)\n",
     "    melspec = np.dot(mel_basis, spec)\n",
+    "\n",
     "    logspec = librosa.power_to_db(melspec, ref=np.max)\n",
     "    logspec = np.transpose(logspec)\n",
+    "\n",
+    "    plot.imshow(logspec.T, origin='lower', aspect='auto')\n",
+    "    plot.show()\n",
+    "    \n",
     "    logspec_tensor = torch.tensor(logspec)\n",
     "    return logspec_tensor\n",
     "\n",
@@ -118,8 +122,10 @@
     "        wav_file = wav_file.set_channels(1)\n",
     "        wav_file.export(audio_file_path, format=\"wav\")\n",
     "\n",
-    "    tensor = load_audio_to_melspec_tensor(audio_file_path)\n",
-    "    print (i, \"\\tfile: \", index.audio_filename, \"\\tduration: \", index.duration, \"\\tensor: \", tensor.shape)\n",
+    "    print (\"frame rate: \", wav_file.frame_rate)\n",
+    "    tensor = load_audio_to_melspec_tensor(audio_file_path, wav_file.frame_rate)\n",
+    "    \n",
+    "    print (i, \"\\tfile: \", index.audio_filename, \"\\tduration: \", wav_file.duration_seconds, \"\\tensor: \", tensor.shape)\n",
     "\n",
     "    i += 1"
    ]
