data creation is complete! now for model stuff

--- a/Final_Project/network_training.ipynb
+++ b/Final_Project/network_training.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.0 Model Architecture\n",
+    "# 2.1 CNN Model Architecture\n",
     "\n",
     "class MyCNN(nn.Module):\n",
     "    def __init__(self, model_type, output_dim):\n",
@@ -214,6 +214,53 @@
     "        out = self.linear5(out)\n",
     "        print (\"[line5] out.shape: \", out.shape)\n",
     "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2.3 bi-LSTM Model Architecture\n",
+    "\n",
+    "class bi_LSTM(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, batch_size, output_dim, num_layers=2, model_type='LSTM'):\n",
+    "        super(bi_LSTM, self).__init__()\n",
+    "        self.model_type = model_type\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.batch_size = batch_size\n",
+    "        self.num_layers = num_layers\n",
+    "        \n",
+    "        # initial linear hidden layer\n",
+    "        self.init_linear = nn.Linear(self.input_dim, self.input_dim)\n",
+    "        \n",
+    "        # LSTM layer\n",
+    "        self.lstm = eval('nn.' + self.model_type)(self.input_dim, self.hidden_dim, self.num_layers, batch_first=True, bidirectional=True)\n",
+    "        \n",
+    "        # output layer\n",
+    "        self.output_linear = nn.Linear(self.hidden_dim * self.num_layers, output_dim)\n",
+    "        \n",
+    "    def init_hidden(self, input):\n",
+    "        # init hidden layer\n",
+    "        return (torch.zeros(self.num_layers, self.batch_size, self.hidden_dim),\n",
+    "                torch.zeros(self.num_layers, self.batch_size, self.hidden_dim))\n",
+    "        \n",
+    "    def forward(self, input):\n",
+    "        #Forward pass through initial hidden layer\n",
+    "        linear_input = self.init_linear(input)\n",
+    "\n",
+    "        # Forward pass through LSTM layer\n",
+    "        # shape of lstm_out: [batch_size, input_size, hidden_dim]\n",
+    "        # shape of self.hidden: (a, b), where a and b both\n",
+    "        # have shape (batch_size, num_layers, hidden_dim).\n",
+    "        lstm_out, self.hidden = self.lstm(linear_input)\n",
+    "\n",
+    "        # Can pass on the entirety of lstm_out to the next layer if it is a seq2seq prediction\n",
+    "        y_pred = self.linear(lstm_out)\n",
+    "        return y_pred\n",
+    "        "
    ]
   },
   {
