--- a/Final_Project/dataset_creation.ipynb
+++ b/Final_Project/dataset_creation.ipynb
@@ -481,7 +481,7 @@
     "        #print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
     "        # show_midi_plot(labels[j])\n",
     "        # show_spectrograph(feats[j])\n",
-    "        show_midi_over_spec(feats[j], labels[j])\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
     "        train_feats.append(feats[j])\n",
     "        train_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
@@ -511,7 +511,7 @@
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
     "    feats, labels = index_to_arrays(index)\n",
     "    for j in range(len(feats)):\n",
-    "        show_midi_over_spec(feats[j], labels[j])\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
     "        test_feats.append(feats[j])\n",
     "        test_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
@@ -541,7 +541,7 @@
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
     "    feats, labels = index_to_arrays(index)\n",
     "    for j in range(len(feats)):\n",
-    "        show_midi_over_spec(feats[j], labels[j])\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
     "        val_feats.append(feats[j])\n",
     "        val_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
