--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,14 @@
     "import librosa\n",
     "import shutil\n",
     "import os\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import matplotlib.pyplot as plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "groove dataset: 1150\n",
+      "train:  846\n",
+      "test:  124\n",
+      "validation:  120\n"
+     ]
+    }
+   ],
    "source": [
     "# 1.0 load groove dataset\n",
     "\n",
-    "groove_csv = pd.read_csv('groove/info.csv')\n",
+    "groove_csv = pd.read_csv('data/groove/info.csv')\n",
     "print(\"groove dataset:\", len(groove_csv))\n",
     "\n",
     "# get train, test, and validation sets\n",
@@ -117,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +377,7 @@
     "\n",
     "def index_to_arrays(csv_index):\n",
     "    # load in wav file\n",
-    "    audio_file_path = \"groove/\" + csv_index.audio_filename\n",
+    "    audio_file_path = \"data/groove/\" + csv_index.audio_filename\n",
     "    wav_file = audiosegment.from_file(audio_file_path)\n",
     "    #print (\"sample rate: \", wav_file.frame_rate)\n",
     "    #print (\"wav duration: \", wav_file.duration_seconds)\n",
@@ -407,7 +419,7 @@
     "    feats_list = np.array(feats_list, dtype='float64')\n",
     "    \n",
     "    # load in midi file\n",
-    "    midi_file_path = \"groove/\" + csv_index.midi_filename\n",
+    "    midi_file_path = \"data/groove/\" + csv_index.midi_filename\n",
     "    midi = mido.MidiFile(midi_file_path)\n",
     "    # convert midi to array\n",
     "    midi_array = mid2array(midi)\n",
@@ -444,7 +456,6 @@
     "    # return numpy arrays\n",
     "    labels_list = np.array(labels_list, dtype='int64')\n",
     "    \n",
-    "    #print (\"feats: \", feats_list.shape)\n",
     "    #print (\"labels: \", labels_list.shape)\n",
     "    \n",
     "    return feats_list , labels_list"
@@ -452,9 +463,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting training dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 846/846 [17:40<00:00,  1.25s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_feats.shape:  (3585, 1000, 128)\n",
+      "train_labels.shape:  (3585, 1000, 9)\n",
+      "training dataset complete!\n",
+      "time elapsed:  1066.93  sec\n",
+      "\n",
+      "starting test dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 124/124 [02:34<00:00,  1.25s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_feats.shape:  (497, 1000, 128)\n",
+      "test_labels.shape:  (497, 1000, 9)\n",
+      "test dataset complete!\n",
+      "time elapsed:  154.86  sec\n",
+      "\n",
+      "starting validation dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 120/120 [02:43<00:00,  1.36s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_feats.shape:  (518, 1000, 128)\n",
+      "val_labels.shape:  (518, 1000, 9)\n",
+      "validation dataset complete!\n",
+      "time elapsed:  165.11  sec\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3.0 run dataset creation loops - save to file\n",
     "\n",
@@ -474,7 +549,7 @@
     "startTime = time.time()\n",
     "train_feats = []\n",
     "train_labels = []\n",
-    "for i, index in enumerate(train_csv):\n",
+    "for i, index in enumerate(tqdm(train_csv)):\n",
     "    # print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
     "    feats, labels = index_to_arrays(index)\n",
     "    for j in range(len(feats)):\n",
@@ -507,7 +582,7 @@
     "startTime = time.time()\n",
     "test_feats = []\n",
     "test_labels = []\n",
-    "for i, index in enumerate(test_csv):\n",
+    "for i, index in enumerate(tqdm(test_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
     "    feats, labels = index_to_arrays(index)\n",
     "    for j in range(len(feats)):\n",
@@ -537,7 +612,7 @@
     "startTime = time.time()\n",
     "val_feats = []\n",
     "val_labels = []\n",
-    "for i, index in enumerate(validation_csv):\n",
+    "for i, index in enumerate(tqdm(validation_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
     "    feats, labels = index_to_arrays(index)\n",
     "    for j in range(len(feats)):\n",
