--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/ihsuan00/SLT-Final-Project/.venv/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# 0.0 import packages\n",
     "\n",
@@ -16,20 +25,29 @@
     "import torch.optim as optim\n",
     "from numba import cuda as numba\n",
     "from GPUtil import showUtilization as gpu_usage\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch device:  GeForce GTX 1080\n"
+     ]
+    }
+   ],
    "source": [
     "# 0.2 GPU stuff\n",
     "\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print (\"torch device: \", torch.cuda.get_device_name())\n",
+    "device = torch.device(\"cuda:1\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"torch device: \", torch.cuda.get_device_name())\n",
     "#device = torch.device(\"cpu\")\n",
     "\n",
     "# function to clear GPU memory\n",
@@ -44,13 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1.0 load in datasets\n",
     "\n",
-    "def load_datasets(print_out = False, place_on_gpu=True):\n",
+    "def load_datasets(print_out = False, train_device=\"cpu\", val_device=\"cpu\", test_device=\"cpu\"):\n",
     "    # load files\n",
     "    train_feats = np.load(\"data/train_feats.npy\", allow_pickle=True)\n",
     "    train_labels = np.load(\"data/train_labels.npy\", allow_pickle=True)\n",
@@ -67,24 +85,24 @@
     "    val_labels = val_labels.reshape(val_labels.shape[0]*val_labels.shape[1], val_labels.shape[2])\n",
     "    \n",
     "    if print_out:\n",
-    "        print (\"train feats: \", train_feats.shape, \" type: \", type(train_feats))\n",
-    "        print (\"train labels: \", train_labels.shape, \" type: \", type(train_labels))\n",
+    "        print(\"train feats: \", train_feats.shape, \" type: \", type(train_feats))\n",
+    "        print(\"train labels: \", train_labels.shape, \" type: \", type(train_labels))\n",
     "\n",
-    "        print (\"test feats: \", test_feats.shape, \" type: \", type(test_feats))\n",
-    "        print (\"test labels: \", test_labels.shape, \" type: \", type(test_labels))\n",
+    "        print(\"test feats: \", test_feats.shape, \" type: \", type(test_feats))\n",
+    "        print(\"test labels: \", test_labels.shape, \" type: \", type(test_labels))\n",
     "\n",
-    "        print (\"val feats: \", val_feats.shape, \" type: \", type(val_feats))\n",
-    "        print (\"val labels: \", val_labels.shape, \" type: \", type(val_labels))\n",
+    "        print(\"val feats: \", val_feats.shape, \" type: \", type(val_feats))\n",
+    "        print(\"val labels: \", val_labels.shape, \" type: \", type(val_labels))\n",
     "\n",
     "    # create tensors\n",
-    "    train_feats_tensor = torch.tensor(train_feats, requires_grad=True, dtype=torch.float)\n",
-    "    train_labels_tensor = torch.tensor(train_labels, dtype=torch.float)\n",
+    "    train_feats_tensor = torch.tensor(train_feats, requires_grad=True, dtype=torch.float).to(train_device)\n",
+    "    train_labels_tensor = torch.tensor(train_labels, dtype=torch.float).to(train_device)\n",
     "\n",
-    "    test_feats_tensor = torch.tensor(test_feats, requires_grad=True, dtype=torch.float)\n",
-    "    test_labels_tensor = torch.tensor(test_labels, dtype=torch.float)\n",
+    "    test_feats_tensor = torch.tensor(test_feats, requires_grad=True, dtype=torch.float).to(test_device)\n",
+    "    test_labels_tensor = torch.tensor(test_labels, dtype=torch.float).to(test_device)\n",
     "\n",
-    "    val_feats_tensor = torch.tensor(val_feats, requires_grad=True, dtype=torch.float)\n",
-    "    val_labels_tensor = torch.tensor(val_labels, dtype=torch.float)\n",
+    "    val_feats_tensor = torch.tensor(val_feats, requires_grad=True, dtype=torch.float).to(val_device)\n",
+    "    val_labels_tensor = torch.tensor(val_labels, dtype=torch.float).to(val_device)\n",
     "\n",
     "    if print_out:\n",
     "        print (\"train feats tensor: \", train_feats_tensor.shape, \" type: \", type(train_feats_tensor))\n",
@@ -95,36 +113,26 @@
     "\n",
     "        print (\"val feats tensor: \", val_feats_tensor.shape, \" type: \", type(val_feats_tensor))\n",
     "        print (\"val labels tensor: \", val_labels_tensor.shape, \" type: \", type(val_labels_tensor))\n",
-    "    \n",
-    "    # place tensors on gpu\n",
-    "    if place_on_gpu:\n",
-    "        if torch.cuda.is_available():\n",
-    "            train_feats_tensor = train_feats_tensor.cuda()\n",
-    "            train_labels_tensor = train_labels_tensor.cuda()\n",
-    "            test_feats_tensor = test_feats_tensor.cuda()\n",
-    "            test_labels_tensor = test_labels_tensor.cuda()\n",
-    "            val_feats_tensor = val_feats_tensor.cuda()\n",
-    "            val_labels_tensor = val_labels_tensor.cuda()\n",
     "            \n",
     "        if print_out:\n",
-    "            print (\"train_feats_tensor.device: \", train_feats_tensor.get_device())\n",
-    "            print (\"train_labels_tensor.device: \", train_labels_tensor.get_device())\n",
-    "            print (\"test_feats_tensor.device: \", test_feats_tensor.get_device())\n",
-    "            print (\"test_labels_tensor.device: \", test_labels_tensor.get_device())\n",
-    "            print (\"val_feats_tensor.device: \", val_feats_tensor.get_device())\n",
-    "            print (\"val_labels_tensor.device: \", val_labels_tensor.get_device())\n",
+    "            print (\"train_feats_tensor.device:\", train_feats_tensor.get_device())\n",
+    "            print (\"train_labels_tensor.device:\", train_labels_tensor.get_device())\n",
+    "            print (\"test_feats_tensor.device:\", test_feats_tensor.get_device())\n",
+    "            print (\"test_labels_tensor.device:\", test_labels_tensor.get_device())\n",
+    "            print (\"val_feats_tensor.device:\", val_feats_tensor.get_device())\n",
+    "            print (\"val_labels_tensor.device:\", val_labels_tensor.get_device())\n",
     "        \n",
-    "    return  train_feats_tensor, \\\n",
-    "            train_labels_tensor, \\\n",
-    "            test_feats_tensor, \\\n",
-    "            test_labels_tensor, \\\n",
-    "            val_feats_tensor, \\\n",
-    "            val_labels_tensor"
+    "    return  (train_feats_tensor,\n",
+    "            train_labels_tensor,\n",
+    "            test_feats_tensor,\n",
+    "            test_labels_tensor,\n",
+    "            val_feats_tensor,\n",
+    "            val_labels_tensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +142,7 @@
     "#   [ train_feats_tensor, train_labels_tensor,\n",
     "#     test_feats_tensor, test_labels_tensor,\n",
     "#     val_feats_tensor, val_labels_tensor ]\n",
-    "def set_up_dataloaders( batch_size, tensor_tuple):\n",
+    "def set_up_dataloaders(batch_size, tensor_tuple):\n",
     "\n",
     "    train_dataset = torch.utils.data.TensorDataset(tensor_tuple[0], tensor_tuple[1])\n",
     "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size, shuffle = True)\n",
@@ -145,14 +153,14 @@
     "    val_dataset = torch.utils.data.TensorDataset(tensor_tuple[4], tensor_tuple[5])\n",
     "    val_loader = torch.utils.data.DataLoader(val_dataset, batch_size, shuffle = False)\n",
     "    \n",
-    "    return  train_dataset, train_loader, \\\n",
-    "            test_dataset, test_loader, \\\n",
-    "            val_dataset, val_loader"
+    "    return  (train_dataset, train_loader,\n",
+    "            test_dataset, test_loader,\n",
+    "            val_dataset, val_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +180,8 @@
     "        self.relu = nn.ReLU()\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        h0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device=device) # hidden state\n",
-    "        c0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device=device) # cell state\n",
+    "        h0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device) # hidden state\n",
+    "        c0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device) # cell state\n",
     "        \n",
     "        # print (\"h0 device: \", h0.device)\n",
     "        # print (\"c0 device: \", c0.device)\n",
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,8 +214,8 @@
     "        for data in test_loader:\n",
     "            # get data\n",
     "            inputs, labels = data\n",
-    "            inputs = inputs.to(device=device)\n",
-    "            labels = labels.to(device=device)\n",
+    "            inputs = inputs.to(device)\n",
+    "            labels = labels.to(device)\n",
     "            \n",
     "            outputs = model(inputs)\n",
     "            #print (\"labels: \", labels)\n",
@@ -241,16 +249,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train feats:  (3585000, 128)  type:  <class 'numpy.ndarray'>\n",
+      "train labels:  (3585000, 9)  type:  <class 'numpy.ndarray'>\n",
+      "test feats:  (497000, 128)  type:  <class 'numpy.ndarray'>\n",
+      "test labels:  (497000, 9)  type:  <class 'numpy.ndarray'>\n",
+      "val feats:  (518000, 128)  type:  <class 'numpy.ndarray'>\n",
+      "val labels:  (518000, 9)  type:  <class 'numpy.ndarray'>\n",
+      "train feats tensor:  torch.Size([3585000, 128])  type:  <class 'torch.Tensor'>\n",
+      "train labels tensor:  torch.Size([3585000, 9])  type:  <class 'torch.Tensor'>\n",
+      "test feats tensor:  torch.Size([497000, 128])  type:  <class 'torch.Tensor'>\n",
+      "test labels tensor:  torch.Size([497000, 9])  type:  <class 'torch.Tensor'>\n",
+      "val feats tensor:  torch.Size([518000, 128])  type:  <class 'torch.Tensor'>\n",
+      "val labels tensor:  torch.Size([518000, 9])  type:  <class 'torch.Tensor'>\n",
+      "train_feats_tensor.device: 1\n",
+      "train_labels_tensor.device: 1\n",
+      "test_feats_tensor.device: -1\n",
+      "test_labels_tensor.device: -1\n",
+      "val_feats_tensor.device: -1\n",
+      "val_labels_tensor.device: -1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 2/3501 [01:07<32:40:22, 33.62s/it]"
+     ]
+    }
+   ],
    "source": [
     "# 3.0 Training\n",
     "\n",
-    "#free_gpu_cache()\n",
+    "# free_gpu_cache()\n",
     "\n",
     "# model parameters:\n",
-    "batch_size = 4\n",
+    "batch_size = 1024\n",
     "input_dim = 128\n",
     "hidden_dim = 128\n",
     "output_dim = 9\n",
@@ -261,13 +301,13 @@
     "num_epochs = 5\n",
     "\n",
     "# get dataloaders\n",
-    "train_dataset, train_loader, \\\n",
-    "test_dataset, test_loader, \\\n",
-    "val_dataset, val_loader = set_up_dataloaders(batch_size, load_datasets(print_out=True, place_on_gpu=False))\n",
+    "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
+    "    batch_size, load_datasets(print_out=True, train_device=device)\n",
+    ")\n",
     "\n",
     "# create model\n",
     "model = bi_LSTM(input_dim, hidden_dim, batch_size, output_dim, num_layers, 'LSTM')\n",
-    "model.to(device=device)\n",
+    "model.to(device)\n",
     "\n",
     "# print (\"device name: \", torch.cuda.get_device_name(0))\n",
     "# print (\"model.type: \", myModel.model_type)\n",
@@ -286,11 +326,10 @@
     "# perform epochs\n",
     "startTime = time.time()\n",
     "for epoch in range(num_epochs):\n",
-    "    print (\"[ epoch: \", epoch, \"]\")\n",
-    "    for batch_index, (feats, labels) in enumerate(train_loader):\n",
+    "    for batch_index, (feats, labels) in enumerate(tqdm(train_loader)):\n",
     "        # place data on GPU\n",
-    "        feats = feats.to(device=device).squeeze(1)\n",
-    "        labels = labels.to(device=device)\n",
+    "        feats = feats.to(device).squeeze(1)\n",
+    "        labels = labels.to(device)\n",
     "        # print (\"feats shape: \", feats.shape)\n",
     "        # print (\"labels shape: \", labels.shape)\n",
     "        # print (\"labels: \", labels)\n",
@@ -308,7 +347,8 @@
     "        optimizer.step()\n",
     "        \n",
     "        # test accuracy and log stats\n",
-    "        if iter % delta == 0:\n",
+    "        if iter % delta == 0 and iter != 0:\n",
+    "            print(\"Testing Network\")\n",
     "            acc = test_network(model, test_loader)\n",
     "            iteration_list.append(iter)\n",
     "            accuracy_list.append(acc)\n",
@@ -338,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
