code add validation every epoch

--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,24 +45,24 @@
    ],
    "source": [
     "# 0.2 GPU stuff\n",
-    "\n",
-    "device = torch.device(\"cuda:1\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device_num = 1\n",
+    "device = torch.device(f\"cuda:{device_num}\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"torch device: \", torch.cuda.get_device_name())\n",
     "#device = torch.device(\"cpu\")\n",
     "\n",
     "# function to clear GPU memory\n",
     "def free_gpu_cache():                        \n",
     "    torch.cuda.empty_cache()\n",
-    "    numba.select_device(0)\n",
+    "    numba.select_device(device_num)\n",
     "    numba.close()\n",
-    "    numba.select_device(0)\n",
+    "    numba.select_device(device_num)\n",
     "    print(\"GPU Usage after emptying the cache\")\n",
     "    gpu_usage()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,6 @@
     "        #print (\"lstm out shape: \", out.shape)\n",
     "        out = self.fc(out[:, -1, :])\n",
     "        #print (\"linear out shape: \", out.shape)\n",
-    "        out = torch.sign(out)\n",
     "        out = self.relu(out)\n",
     "        \n",
     "        return out"
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,8 +267,8 @@
       "test labels tensor:  torch.Size([497000, 9])  type:  <class 'torch.Tensor'>\n",
       "val feats tensor:  torch.Size([518000, 128])  type:  <class 'torch.Tensor'>\n",
       "val labels tensor:  torch.Size([518000, 9])  type:  <class 'torch.Tensor'>\n",
-      "train_feats_tensor.device: 1\n",
-      "train_labels_tensor.device: 1\n",
+      "train_feats_tensor.device: -1\n",
+      "train_labels_tensor.device: -1\n",
       "test_feats_tensor.device: -1\n",
       "test_labels_tensor.device: -1\n",
       "val_feats_tensor.device: -1\n",
@@ -280,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 2/3501 [01:07<32:40:22, 33.62s/it]"
+      "  0%|          | 18/112032 [09:07<906:53:07, 29.15s/it]"
      ]
     }
    ],
@@ -290,7 +289,7 @@
     "# free_gpu_cache()\n",
     "\n",
     "# model parameters:\n",
-    "batch_size = 1024\n",
+    "batch_size = 32\n",
     "input_dim = 128\n",
     "hidden_dim = 128\n",
     "output_dim = 9\n",
@@ -302,7 +301,7 @@
     "\n",
     "# get dataloaders\n",
     "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
-    "    batch_size, load_datasets(print_out=True, train_device=device)\n",
+    "    batch_size, load_datasets(print_out=True)\n",
     ")\n",
     "\n",
     "# create model\n",
@@ -313,7 +312,7 @@
     "# print (\"model.type: \", myModel.model_type)\n",
     "# print (\"model.device: \", next(myModel.parameters()).device)\n",
     "\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.BCEWithLogitsLoss().to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
     "# lists for data collection\n",
@@ -325,8 +324,13 @@
     "\n",
     "# perform epochs\n",
     "startTime = time.time()\n",
+    "min_valid_loss = np.inf\n",
     "for epoch in range(num_epochs):\n",
+    "    total = 0\n",
+    "    correct = 0\n",
+    "    total_loss = 0\n",
     "    for batch_index, (feats, labels) in enumerate(tqdm(train_loader)):\n",
+    "        optimizer.zero_grad()\n",
     "        # place data on GPU\n",
     "        feats = feats.to(device).squeeze(1)\n",
     "        labels = labels.to(device)\n",
@@ -336,27 +340,45 @@
     "        \n",
     "        # forward\n",
     "        output = model(feats)\n",
-    "        #print (\"output: \", output)\n",
     "        loss = criterion(output, labels)\n",
-    "        \n",
-    "        # backward\n",
-    "        optimizer.zero_grad()\n",
+    "        #backward\n",
     "        loss.backward()\n",
-    "        \n",
-    "        # gradient descent\n",
+    "        #gradient descent\n",
     "        optimizer.step()\n",
-    "        \n",
-    "        # test accuracy and log stats\n",
-    "        if iter % delta == 0 and iter != 0:\n",
-    "            print(\"Testing Network\")\n",
-    "            acc = test_network(model, test_loader)\n",
-    "            iteration_list.append(iter)\n",
-    "            accuracy_list.append(acc)\n",
-    "            loss_list.append(loss)\n",
-    "            print(f'\\t iteration: {iter}\\t loss: {loss_list[len(loss_list)-1].item():.3f}\\t accuracy: {accuracy_list[len(accuracy_list)-1]:.3f} %')\n",
+    "        total_loss += loss.item()\n",
+    "    valid_loss = 0.0\n",
+    "    model.eval()     # Optional when not using Model Specific layer\n",
+    "    for batch_index, (feats, labels) in enumerate(tqdm(val_loader)):\n",
+    "        # Transfer Data to GPU if available\n",
+    "        feats = feats.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        output = model(feats)\n",
+    "        loss = criterion(output,labels)\n",
+    "        # Calculate Loss\n",
+    "        valid_loss += loss.item()\n",
+    "    print(f'Epoch {epoch} \\t\\t Training Loss: {total_loss/ len(train_loader)} \\t\\t Validation Loss: {valid_loss / len(val_loader)}') \n",
+    "    if min_valid_loss > valid_loss:\n",
+    "        print(f'Validation Loss Decreased({min_valid_loss:.6f\\\n",
+    "        }--->{valid_loss:.6f}) \\t Saving The Model')\n",
+    "        min_valid_loss = valid_loss\n",
+    "         \n",
+    "        # Saving State Dict\n",
+    "        torch.save(model.state_dict(), 'saved_model.pth')\n",
+    "\n",
     "    \n",
-    "        # increase iteration\n",
-    "        iter += 1\n",
+    "    # print(f'\\t iteration: {iter}\\t loss: {loss_list[len(loss_list)-1].item():.3f}\\t accuracy: {accuracy_list[len(accuracy_list)-1]:.3f} %') \n",
+    "    # print('Test accuracy: %d %%' % (100 * correct / total)) \n",
+    "        # test accuracy and log stats\n",
+    "        # if iter % delta == 0 and iter != 0:\n",
+    "        #     print(\"Testing Network\")\n",
+    "        #     acc = test_network(model, test_loader)\n",
+    "        #     iteration_list.append(iter)\n",
+    "        #     accuracy_list.append(acc)\n",
+    "        #     loss_list.append(loss)\n",
+    "        #     print(f'\\t iteration: {iter}\\t loss: {loss_list[len(loss_list)-1].item():.3f}\\t accuracy: {accuracy_list[len(accuracy_list)-1]:.3f} %')\n",
+    "    \n",
+    "        # # increase iteration\n",
+    "        # iter += 1\n",
     "\n",
     "print (\"time elapsed: \", round((time.time() - startTime), 2), \" sec\")"
    ]
