--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/ihsuan00/SLT-Final-Project/.venv/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 0.0 import packages\n",
     "\n",
@@ -26,28 +17,23 @@
     "from numba import cuda as numba\n",
     "from GPUtil import showUtilization as gpu_usage\n",
     "from tqdm import tqdm\n",
+    "import time\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from models.bi_lstm import bi_LSTM\n",
+    "from utils.tools import dotdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch device:  GeForce GTX 1080\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 0.2 GPU stuff\n",
     "device_num = 1\n",
     "device = torch.device(f\"cuda:{device_num}\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(\"torch device: \", torch.cuda.get_device_name())\n",
+    "print(\"torch device: \", torch.cuda.get_device_name(device))\n",
     "#device = torch.device(\"cpu\")\n",
     "\n",
     "# function to clear GPU memory\n",
@@ -62,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,47 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2.2 bi-LSTM Model Architecture\n",
-    "\n",
-    "class bi_LSTM(nn.Module):\n",
-    "    def __init__(self, input_dim, hidden_dim, batch_size, output_dim, num_layers=2, model_type='LSTM'):\n",
-    "        super(bi_LSTM, self).__init__()\n",
-    "        self.model_type = model_type\n",
-    "        self.input_dim = input_dim\n",
-    "        self.hidden_dim = hidden_dim\n",
-    "        self.batch_size = batch_size\n",
-    "        self.num_layers = num_layers\n",
-    "        \n",
-    "        self.lstm = nn.LSTM(input_dim, hidden_dim, num_layers, batch_first=True, bidirectional=True)\n",
-    "        self.fc = nn.Linear(hidden_dim*2, output_dim)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        h0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device) # hidden state\n",
-    "        c0 = torch.zeros(self.num_layers*2, x.size(0), self.hidden_dim).to(device) # cell state\n",
-    "        \n",
-    "        # print (\"h0 device: \", h0.device)\n",
-    "        # print (\"c0 device: \", c0.device)\n",
-    "        # print (\"x device: \", x.device)\n",
-    "        \n",
-    "        x = x[:, None, :]\n",
-    "        #print (\"init x shape: \", x.shape)\n",
-    "        out, _ = self.lstm(x, (h0, c0))\n",
-    "        #print (\"lstm out shape: \", out.shape)\n",
-    "        out = self.fc(out[:, -1, :])\n",
-    "        #print (\"linear out shape: \", out.shape)\n",
-    "        out = self.relu(out)\n",
-    "        \n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,54 +194,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train feats:  (3585000, 128)  type:  <class 'numpy.ndarray'>\n",
-      "train labels:  (3585000, 9)  type:  <class 'numpy.ndarray'>\n",
-      "test feats:  (497000, 128)  type:  <class 'numpy.ndarray'>\n",
-      "test labels:  (497000, 9)  type:  <class 'numpy.ndarray'>\n",
-      "val feats:  (518000, 128)  type:  <class 'numpy.ndarray'>\n",
-      "val labels:  (518000, 9)  type:  <class 'numpy.ndarray'>\n",
-      "train feats tensor:  torch.Size([3585000, 128])  type:  <class 'torch.Tensor'>\n",
-      "train labels tensor:  torch.Size([3585000, 9])  type:  <class 'torch.Tensor'>\n",
-      "test feats tensor:  torch.Size([497000, 128])  type:  <class 'torch.Tensor'>\n",
-      "test labels tensor:  torch.Size([497000, 9])  type:  <class 'torch.Tensor'>\n",
-      "val feats tensor:  torch.Size([518000, 128])  type:  <class 'torch.Tensor'>\n",
-      "val labels tensor:  torch.Size([518000, 9])  type:  <class 'torch.Tensor'>\n",
-      "train_feats_tensor.device: -1\n",
-      "train_labels_tensor.device: -1\n",
-      "test_feats_tensor.device: -1\n",
-      "test_labels_tensor.device: -1\n",
-      "val_feats_tensor.device: -1\n",
-      "val_labels_tensor.device: -1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 18/112032 [09:07<906:53:07, 29.15s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3.0 Training\n",
     "\n",
     "# free_gpu_cache()\n",
     "\n",
     "# model parameters:\n",
-    "batch_size = 32\n",
-    "input_dim = 128\n",
-    "hidden_dim = 128\n",
-    "output_dim = 9\n",
-    "num_layers = 2\n",
+    "config = dotdict({\n",
+    "    \"input_dim\": 128,\n",
+    "    \"hidden_dim\": 128,\n",
+    "    \"output_dim\": 9,\n",
+    "    \"num_layers\": 2,\n",
+    "    \"model_type\": \"biLSTM\"\n",
+    "})\n",
+    "\n",
     "\n",
     "# training parameters\n",
+    "batch_size = 32\n",
     "learning_rate = 0.001\n",
     "num_epochs = 5\n",
     "\n",
@@ -305,7 +223,7 @@
     ")\n",
     "\n",
     "# create model\n",
-    "model = bi_LSTM(input_dim, hidden_dim, batch_size, output_dim, num_layers, 'LSTM')\n",
+    "model = bi_LSTM(config)\n",
     "model.to(device)\n",
     "\n",
     "# print (\"device name: \", torch.cuda.get_device_name(0))\n",
@@ -330,22 +248,30 @@
     "    correct = 0\n",
     "    total_loss = 0\n",
     "    for batch_index, (feats, labels) in enumerate(tqdm(train_loader)):\n",
+    "        start = time.time()\n",
     "        optimizer.zero_grad()\n",
     "        # place data on GPU\n",
     "        feats = feats.to(device).squeeze(1)\n",
     "        labels = labels.to(device)\n",
+    "        print(\"Time consumed in moving feats&labels to gpu: \", time.time() - start)\n",
     "        # print (\"feats shape: \", feats.shape)\n",
     "        # print (\"labels shape: \", labels.shape)\n",
     "        # print (\"labels: \", labels)\n",
     "        \n",
     "        # forward\n",
+    "        start = time.time()\n",
     "        output = model(feats)\n",
     "        loss = criterion(output, labels)\n",
+    "        print(\"Time consumed in forward: \", time.time() - start)\n",
     "        #backward\n",
+    "        start = time.time()\n",
     "        loss.backward()\n",
+    "        print(\"Time consumed in backward: \", time.time() - start)\n",
     "        #gradient descent\n",
+    "        start = time.time()\n",
     "        optimizer.step()\n",
     "        total_loss += loss.item()\n",
+    "        print(\"Time consumed in step: \", time.time() - start)\n",
     "    valid_loss = 0.0\n",
     "    model.eval()     # Optional when not using Model Specific layer\n",
     "    for batch_index, (feats, labels) in enumerate(tqdm(val_loader)):\n",
@@ -386,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.10.6 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -402,10 +328,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "da06df106b6ebc505395780f3c76810614ede012a8d0e2bc265d4156a4243031"
    }
   }
  },
