--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -54,14 +54,14 @@
    "source": [
     "# 1.0 load in datasets\n",
     "\n",
-    "def load_datasets(print_out = False, train_device=\"cpu\", val_device=\"cpu\", test_device=\"cpu\"):\n",
+    "def load_datasets(data_id, print_out = False, train_device=\"cpu\", val_device=\"cpu\", test_device=\"cpu\"):\n",
     "    # load files\n",
-    "    train_feats = np.load(\"data/train_feats.npy\", allow_pickle=True)\n",
-    "    train_labels = np.load(\"data/train_labels.npy\", allow_pickle=True)\n",
-    "    test_feats = np.load(\"data/test_feats.npy\", allow_pickle=True)\n",
-    "    test_labels = np.load(\"data/test_labels.npy\", allow_pickle=True)\n",
-    "    val_feats = np.load(\"data/val_feats.npy\", allow_pickle=True)\n",
-    "    val_labels = np.load(\"data/val_labels.npy\", allow_pickle=True)\n",
+    "    train_feats = np.load(\"data/dataset\" + data_id + \"/train_feats\" + data_id + \".npy\", allow_pickle=True)\n",
+    "    train_labels = np.load(\"data/dataset\" + data_id + \"/train_labels\" + data_id + \".npy\", allow_pickle=True)\n",
+    "    test_feats = np.load(\"data/dataset\" + data_id + \"/test_feats\" + data_id + \".npy\", allow_pickle=True)\n",
+    "    test_labels = np.load(\"data/dataset\" + data_id + \"/test_labels\" + data_id + \".npy\", allow_pickle=True)\n",
+    "    val_feats = np.load(\"data/dataset\" + data_id + \"/val_feats\" + data_id + \".npy\", allow_pickle=True)\n",
+    "    val_labels = np.load(\"data/dataset\" + data_id + \"/val_labels\" + data_id + \".npy\", allow_pickle=True)\n",
     "    # reshape numpy arrays\n",
     "    train_feats = train_feats.reshape(train_feats.shape[0]*train_feats.shape[1], train_feats.shape[2])\n",
     "    train_labels = train_labels.reshape(train_labels.shape[0]*train_labels.shape[1], train_labels.shape[2])\n",
@@ -219,7 +219,7 @@
     "\n",
     "# get dataloaders\n",
     "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
-    "    batch_size, load_datasets(print_out=True)\n",
+    "    batch_size, load_datasets(data_id=\"_5s_50hz\", print_out=True)\n",
     ")\n",
     "\n",
     "# create model\n",
@@ -254,8 +254,8 @@
     "        feats = feats.to(device).squeeze(1)\n",
     "        labels = labels.to(device)\n",
     "        print(\"Time consumed in moving feats&labels to gpu: \", time.time() - start)\n",
-    "        # print (\"feats shape: \", feats.shape)\n",
-    "        # print (\"labels shape: \", labels.shape)\n",
+    "        print (\"feats shape: \", feats.shape)\n",
+    "        print (\"labels shape: \", labels.shape)\n",
     "        # print (\"labels: \", labels)\n",
     "        \n",
     "        # forward\n",
@@ -312,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('.venv': venv)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -326,11 +326,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "da06df106b6ebc505395780f3c76810614ede012a8d0e2bc265d4156a4243031"
+    "hash": "2eb717040054f9e1cd6390da57b4c3f6de62338193843f816e8f12a4d5407ba0"
    }
   }
  },
